[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/main menu.gd" type="Script" id=1]
[ext_resource path="res://assets/enemy bullet.png" type="Texture" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]
[ext_resource path="res://assets/enemy.png" type="Texture" id=4]
[ext_resource path="res://assets/shooting_bird.png" type="Texture" id=5]
[ext_resource path="res://fonts/Inter,Pixelify_Sans/Pixelify_Sans/PixelifySans-VariableFont_wght.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://audio/music_zapsplat_easy_cheesy.mp3" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
font_data = ExtResource( 6 )

[node name="main menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 1, 1 )
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 3 )

[node name="shooting bird" type="Sprite" parent="."]
position = Vector2( 151, 321 )
rotation = -0.261799
scale = Vector2( 10.1054, 10.1054 )
z_index = 1
texture = ExtResource( 5 )

[node name="enemy" type="Sprite" parent="."]
position = Vector2( 560, 215 )
rotation = -0.261799
scale = Vector2( 10.1054, 10.1054 )
z_index = 1
texture = ExtResource( 4 )
flip_h = true

[node name="bullets" type="Sprite" parent="."]
position = Vector2( 227.577, 182.379 )
rotation = 2.87979
scale = Vector2( 10.5863, 10.5863 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -634.0
margin_top = -5.0
margin_right = 6.0
margin_bottom = 597.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 1 )
text = "Flap & Blast"
align = 1
valign = 1
uppercase = true

[node name="start" type="Button" parent="VBoxContainer"]
margin_top = 101.0
margin_right = 640.0
margin_bottom = 144.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
toggle_mode = true
action_mode = 0
text = "Start"
flat = true
icon_align = 1

[node name="how to play" type="Button" parent="VBoxContainer"]
margin_top = 148.0
margin_right = 640.0
margin_bottom = 191.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
toggle_mode = true
action_mode = 0
text = "How to play"
flat = true
icon_align = 1

[node name="quit" type="Button" parent="VBoxContainer"]
margin_top = 195.0
margin_right = 640.0
margin_bottom = 238.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
toggle_mode = true
action_mode = 0
text = "quit"
flat = true
icon_align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="toggled" from="VBoxContainer/how to play" to="." method="_on_how_to_play_toggled"]
[connection signal="toggled" from="VBoxContainer/quit" to="." method="_on_quit_toggled"]
